bin_PROGRAMS = LazyVisu

LazyVisu_SOURCES = \
	LazyVisu.c \
	lazy_passthrough_internal.h
LazyVisu_CFLAGS = @CLUTTER_GTK_CFLAGS@
#  uncomment the following if LazyVisu requires the math library
LazyVisu_LDADD = @CLUTTER_GTK_LIBS@

EXTRA_DIST =

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
info_TEXINFOS =
LazyVisu_TEXINFOS =

#  install the man pages
man_MANS=
