dnl Process this file with autoconf to produce a configure script.

AC_INIT(LazyVisu.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(LazyVisu, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST
AM_PROG_CC_C_O

dnl Checks for programs.
AC_PROG_INSTALL

dnl Checks for libraries.
PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(CLUTTER_GTK, [clutter-gtk-0.10])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )


AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
